...

    <ImageView
        android:id="@+id/iv_comments"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_comments_count"
        app:layout_constraintEnd_toStartOf="@id/tv_comments_count"
        app:layout_constraintStart_toEndOf="@id/tv_likes_count"
        app:layout_constraintTop_toTopOf="@+id/tv_comments_count"
        android:tint="@color/color_gray"
        app:srcCompat="@drawable/ic_insert_comment_black_24dp" />

...
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/color_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/iv_bookmark"
        app:layout_constraintStart_toEndOf="@+id/tv_comments_count"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        android:text="3 min read" />

    <ImageView
        android:id="@+id/iv_bookmark"
...
