<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="tv_comment_body" type="id"></item>
</resources>